@@ -25,8 +25,10 @@
 #include "ace/Atomic_Op.h"
 
 #if defined (ACE_WIN32) || \
-    (defined (_POSIX_MONOTONIC_CLOCK) && !defined (ACE_LACKS_MONOTONIC_TIME)) || \
-    defined (ACE_HAS_CLOCK_GETTIME_MONOTONIC)
+    (!defined (ACE_LACKS_MONOTONIC_TIME) && \
+     !defined (ACE_LACKS_CONDATTR) && \
+     (defined (_POSIX_MONOTONIC_CLOCK) || defined (ACE_HAS_CLOCK_GETTIME_MONOTONIC))&& \
+      defined (_POSIX_CLOCK_SELECTION))
 
 # include "ace/Monotonic_Time_Policy.h"
 # if defined (ACE_WIN32)
